Fixed Navigator Validation

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div id="result"></div>
 			<div id="error" class="error"></div>
 		</div>
-		<script src="https://cdn.jsdelivr.net/gh/41Baloo/balooPow@latest/balooPow.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/41Baloo/balooPow@latest/balooPow.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 		<script>
 			function getRandomPrivateSalt(difficulty) {
